--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ body {
     object-fit: contain;
     transition: transform 0.1s linear, opacity 0.3s ease;
     display: none; 
+
+    /* ضيف السطور الجديدة دي هنا */
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    transform: translateZ(0); 
 }
 
 /* 5. تصميم الأنابيب (تأثير 3D ولامع) */
@@ -228,3 +233,15 @@ body {
 
 .footer-text { margin-top: 25px; font-size: 13px; color: #777; }
 .footer-text span { color: #00ffff; }
+
+/* 7. الطائر الشرير */
+.evil-bird {
+    position: absolute;
+    width: 50px; /* حجمه أكبر قليلاً من طائرك */
+    height: 50px;
+    z-index: 100;
+    object-fit: contain;
+    /* الطائر قادم من اليمين، لذا سنعكس اتجاهه ليكون وجهه لليسار */
+    transform: scaleX(1); 
+    filter: drop-shadow(0 0 10px rgba(255, 0, 0, 0.8)); /* وهج أحمر شرير */
+}
